Fixed bug with search button style on Safari

--- a/components/form/SearchButton/SearchButton.module.css
+++ b/components/form/SearchButton/SearchButton.module.css
@@ -6,6 +6,8 @@
   border: none;
   border-radius: 0 1.25rem 1.25rem 0;
   width: 3rem;
+  padding: 0;
+  margin: 0;
   background-color: var(--search-button-background);
 }
 
